force-app/main/default/objects/Candidate__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores the applicant&apos;s working email address.</description>
    <externalId>true</externalId>
    <inlineHelpText>Email address of the Applicant.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>