force-app/main/default/objects/Candidate__c/fields/exp__c.field-meta.xml
<CustomField>
    <fullName>exp__c</fullName>
    <description>Stores the applicant&apos;s total years of experience.</description>
    <inlineHelpText>Total years of experience the applicant has.</inlineHelpText>
    <label>Total Experience</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>