force-app/main/default/objects/Candidate__c/fields/hInterviewerId__c.field-meta.xml
<CustomField>
    <fullName>hInterviewerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the User responsible for conducting the HR evaluation, including cultural fit, compensation discussion, and final eligibility assessment.</description>
    <inlineHelpText>Select the interviewer responsible for the candidate’s HR round.</inlineHelpText>
    <label>HR Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HRCandidates</relationshipName>
    <type>Lookup</type>
</CustomField>