force-app/main/default/objects/Candidate__c/fields/isofferreleased__c.field-meta.xml
<CustomField>
    <fullName>isofferreleased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the applicant has been offered the letter of joining.</description>
    <inlineHelpText>Offer Letter Released status.</inlineHelpText>
    <label>Released Offer</label>
    <type>Checkbox</type>
</CustomField>