force-app/main/default/objects/Candidate__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <formula>HYPERLINK(
   &apos;https://www.linkedin.com/search/results/all/?keywords&apos; &amp; Name,
   &apos;Linkedin Search&apos;,
   &apos;_blank&apos;
)</formula>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>