force-app/main/default/objects/Candidate__c/fields/mInterviewerId__c.field-meta.xml
<CustomField>
    <fullName>mInterviewerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the User responsible for conducting the managerial evaluation of the candidate, focusing on team fit, leadership alignment, and role expectations.</description>
    <inlineHelpText>Select the interviewer responsible for the candidate’s managerial round.</inlineHelpText>
    <label>Manager Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MRCandidates</relationshipName>
    <type>Lookup</type>
</CustomField>