force-app/main/default/objects/Candidate__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <description>Stores the working mobile of the applicant</description>
    <inlineHelpText>Applicant&apos;s Mobile Number.</inlineHelpText>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>