force-app/main/default/objects/Candidate__c/fields/skill__c.field-meta.xml
<CustomField>
    <fullName>skill__c</fullName>
    <description>Stores the primary skillset of the applicant.</description>
    <inlineHelpText>Primary skillset of the applicant.</inlineHelpText>
    <label>Skill-Set</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Automation Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>