force-app/main/default/objects/Candidate__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>Stores the current status of the applicant in the recruitment process.</description>
    <inlineHelpText>Current status of the recruitment flow.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Technical Done.</fullName>
            </value>
            <value>
                <fullName>Manager Done.</fullName>
            </value>
            <value>
                <fullName>Recruited</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Participated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>