force-app/main/default/objects/Candidate__c/fields/tInterviewerId__c.field-meta.xml
<CustomField>
    <fullName>tInterviewerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the User responsible for conducting the technical evaluation of the candidate, focusing on technical expertise for handling the project.</description>
    <inlineHelpText>Select the interviewer responsible for the candidate’s Technical round.</inlineHelpText>
    <label>Technical Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TRCandidates</relationshipName>
    <type>Lookup</type>
</CustomField>