force-app/main/default/objects/Candidate__c/validationRules/Candidate_TotalExperience_NonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_TotalExperience_NonNegative</fullName>
    <active>true</active>
    <description>experience of the candidate</description>
    <errorConditionFormula>exp__c &lt; 0</errorConditionFormula>
    <errorDisplayField>exp__c</errorDisplayField>
    <errorMessage>CAN-422-VR-EXP-NONNEG – Total Experience cannot be negative.</errorMessage>
</ValidationRule>