force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mobile__c</columns>
    <columns>email__c</columns>
    <columns>skill__c</columns>
    <columns>status__c</columns>
    <columns>isofferreleased__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>